fix overlapping text

--- a/packages/frontend/app/components/Trade/LimitCloseModal/LimitCloseModal.module.css
+++ b/packages/frontend/app/components/Trade/LimitCloseModal/LimitCloseModal.module.css
@@ -36,6 +36,7 @@
 }
 
 .warning_message {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
