--- a/packages/frontend/app/components/Trade/OrderInput/SizeInput/SizeInput.module.css
+++ b/packages/frontend/app/components/Trade/OrderInput/SizeInput/SizeInput.module.css
@@ -24,6 +24,7 @@
     text-align: right;
     color: var(--text1);
     cursor: pointer;
+    background-color: yellow;
 }
 .tokenButton {
     background-color: transparent;
